[tool.poetry]
name = "fractopo-help"
version = "0.1.0"
description = ""
authors = ["nialov <nikolasovaskainen@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fractopo = "==0.2.5"
jupyterlab = "*"
nox = "*"
invoke = "*"
black = {extras = ["jupyter"], version = "^22.1.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
